# dbt-altertable

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
dbt/adapters/altertable/: __init__.py  connections.py  impl.py
dbt/include/altertable/: dbt_project.yml
dbt/include/altertable/macros/: adapters.sql  catalog.sql  columns.sql  persist_docs.sql  seed.sql  snapshot_helper.sql
dbt/include/altertable/macros/utils/: any_value.sql  dateadd.sql  datediff.sql  generate_series.sql  lastday.sql  listagg.sql  splitpart.sql
tests/: conftest.py
tests/integration/: conftest.py  test_adapter_operations.py
tests/unit/: test_adapter.py  test_connections.py
