[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-altertable"
version = "0.1.0"
description = "DBT adapter for Altertable"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Altertable Team", email = "leo@altertable.ai"}
]
keywords = ["dbt", "altertable", "adapter", "database", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "dbt-core>=1.5.0",
    "dbt-adapters>=0.1.0",
    "adbc_driver_manager>=0.1.0",
    "adbc_driver_sqlite>=0.1.0",
    "adbc_driver_flightsql>=0.1.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-pytz>=2023.0.0.0",
]

[project.urls]
Homepage = "https://github.com/altertable/dbt-altertable"
Repository = "https://github.com/altertable/dbt-altertable"
Documentation = "https://github.com/altertable/dbt-altertable#readme"
"Bug Tracker" = "https://github.com/altertable/dbt-altertable/issues"

[tool.setuptools]
packages = [
    "dbt.adapters.altertable",
    "dbt.include.altertable",
]

[tool.setuptools.package-data]
"dbt.include.altertable" = [
    "dbt_project.yml",
    "macros/**",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["dbt"]
known_third_party = ["pytest"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Integration tests requiring real database connection",
]
